--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>YourHosting • Status Page</title>
+  <title>AhmadStore • Status Page</title>
   <meta name="description" content="Public hosting status page dengan uptime history, grouping service, dan monitoring." />
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -317,3 +317,4 @@ async function checkAll(){
 </script>
 </body>
 </html>
+
