--- a/index.html
+++ b/index.html
@@ -1,244 +1,167 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AhmadStore • Status Page</title>
-  <meta name="description" content="Public hosting status page dengan uptime history, grouping service, dan monitoring." />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>AhmadStore • Status Page</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js">
-// ===== MULTI LOCATION CHECKER =====
-async function checkDomainMulti(domain, table){
-  const locations = ['ID','SG'];
-  for(const loc of locations){
-    const tr=document.createElement('tr');
-    tr.innerHTML=`<td>${domain} (${loc})</td><td>Checking...</td><td>-</td>`;
-    table.appendChild(tr);
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    try{
-      const url = domain.startsWith('http')?domain:`https://${domain}`;
-      const start = performance.now();
-      await fetch(url,{mode:'no-cors'});
-      const ms = Math.round(performance.now()-start);
-      tr.cells[1].innerHTML='<span class="online">ONLINE</span>';
-      tr.cells[2].innerText=ms+' ms';
-
-      if(lastStatus[domain+loc] === 'DOWN'){
-        sendDiscordAlert(domain,'UP',ms+' ms',loc);
-      }
-      lastStatus[domain+loc] = 'UP';
-    }catch{
-      tr.cells[1].innerHTML='<span class="offline">OFFLINE</span>';
-      tr.cells[2].innerText='-';
-
-      if(lastStatus[domain+loc] !== 'DOWN'){
-        sendDiscordAlert(domain,'DOWN','-',loc);
-      }
-      lastStatus[domain+loc] = 'DOWN';
-    }
-  }
-}
-
-// OVERRIDE CHECK ALL
-async function checkAll(){
-  const domains=document.getElementById('domainInput').value.split(',').map(d=>d.trim()).filter(Boolean);
-  const panel=document.getElementById('panelTable');
-  const node=document.getElementById('nodeTable');
-  panel.innerHTML=''; node.innerHTML='';
-
-  let online=0;
-  for(const d of domains){
-    await checkDomainMulti(d, d.includes('panel')?panel:node);
-    if(lastStatus[d+'ID']==='UP' || lastStatus[d+'SG']==='UP') online++;
-  }
-
-  const percent=Math.round((online/domains.length)*100||0);
-  document.getElementById('globalStatus').className='card status-big '+(percent===100?'ok':'warn');
-  document.getElementById('globalStatus').innerHTML=`<h2>${percent===100?'All Systems Operational':'Partial Outage'}</h2>`;
-
-  if(mode==='advanced'){
-    if(!chart) initChart();
-    uptimeHistory.push(percent);
-    chart.data.labels.push(new Date().toLocaleTimeString());
-    chart.data.datasets[0].data.push(percent);
-    chart.update();
-    document.getElementById('log').innerHTML+=`• ${percent}% uptime<br>`;
-  }
-}
-</script>
-
-  <style>
+<style>
 :root{
-  --bg:#030712;
-  --card:rgba(17,24,39,.75);
+  --bg:#020617;
+  --glass:rgba(255,255,255,.04);
   --border:rgba(255,255,255,.08);
   --text:#e5e7eb;
   --muted:#9ca3af;
-  --primary:#7c7cff;
+  --primary:#818cf8;
   --secondary:#22d3ee;
   --success:#22c55e;
-  --danger:#ef4444;
-  --glass:blur(18px);
+  --warning:#facc15;
 }
-*{box-sizing:border-box;font-family:'Poppins',sans-serif}
+
+*{box-sizing:border-box;font-family:Poppins,sans-serif}
+
 body{
-  margin:0;min-height:100vh;color:var(--text);
+  margin:0;color:var(--text);
   background:
-    radial-gradient(800px 400px at 10% -10%,rgba(124,124,255,.15),transparent),
+    radial-gradient(700px 350px at 10% -10%,rgba(129,140,248,.15),transparent),
     radial-gradient(600px 300px at 90% 10%,rgba(34,211,238,.12),transparent),
     var(--bg);
 }
 
-header{text-align:center;padding:48px 20px 28px}
-header h1{
-  margin:0;font-size:36px;font-weight:700;
-  background:linear-gradient(90deg,var(--primary),var(--secondary));
-  -webkit-background-clip:text;background-clip:text;color:transparent
+header{
+  padding:60px 20px;
+  text-align:center
 }
-header p{margin-top:10px;color:var(--muted)}
+header h1{
+  margin:0;
+  font-size:38px;
+  background:linear-gradient(90deg,var(--primary),var(--secondary));
+  -webkit-background-clip:text;
+  color:transparent
+}
+header p{color:var(--muted)}
 
-.container{max-width:1150px;margin:auto;padding:20px}
+.container{
+  max-width:1100px;
+  margin:auto;
+  padding:20px
+}
 
 .card{
-  position:relative;
-  background:linear-gradient(180deg,rgba(17,24,39,.85),rgba(2,6,23,.9));
-  backdrop-filter:var(--glass);
-  -webkit-backdrop-filter:var(--glass);
+  background:linear-gradient(180deg,var(--glass),transparent);
+  backdrop-filter:blur(10px);
   border:1px solid var(--border);
-  border-radius:26px;
-  padding:22px;
+  border-radius:24px;
+  padding:24px;
   margin-bottom:20px;
-  box-shadow:0 20px 60px rgba(0,0,0,.55)
+  box-shadow:0 30px 80px rgba(0,0,0,.6);
+  transition:.3s
 }
-.card::before{
-  content:"";position:absolute;inset:0;border-radius:inherit;
-  background:linear-gradient(120deg,transparent,rgba(124,124,255,.15),transparent);
-  opacity:.6;pointer-events:none
-}
+.card:hover{transform:translateY(-2px)}
 
-.status-big{text-align:center;padding:26px}
-.status-big h2{margin:0;font-size:28px}
-.status-big.ok h2{color:var(--success)}
-.status-big.warn h2{color:#facc15}
-
-.brand{display:flex;align-items:center;gap:12px;font-weight:700;font-size:17px}
-.brand img{width:40px;height:40px;border-radius:12px;box-shadow:0 0 25px rgba(124,124,255,.35)}
-
-.top-bar{display:flex;flex-wrap:wrap;gap:14px;align-items:center;justify-content:space-between}
-
-.mode-toggle button{
-  padding:9px 16px;border-radius:999px;
-  border:1px solid var(--border);
-  background:rgba(2,6,23,.7);color:var(--text);
-  cursor:pointer;font-size:13px;
-  transition:.25s
-}
-.mode-toggle button:hover{transform:translateY(-1px)}
-.mode-toggle .active{
-  background:linear-gradient(135deg,var(--primary),var(--secondary));
-  border:none;color:#020617
+.status-big{text-align:center}
+.status-big h2{
+  margin:0;
+  font-size:26px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  gap:10px
 }
 
-.input-group{display:flex;gap:12px;flex-wrap:wrap}
+.badge{
+  padding:6px 14px;
+  border-radius:999px;
+  font-size:13px;
+  font-weight:600
+}
+.badge.ok{background:rgba(34,197,94,.15);color:var(--success)}
+.badge.warn{background:rgba(250,204,21,.15);color:var(--warning)}
+
+.brand{
+  display:flex;
+  align-items:center;
+  gap:12px;
+  font-weight:700
+}
+.brand img{
+  width:40px;
+  border-radius:12px
+}
+
+.input-group{
+  display:flex;
+  gap:14px;
+  flex-wrap:wrap
+}
 input{
-  flex:1;min-width:240px;
-  padding:14px 16px;border-radius:16px;
+  flex:1;
+  min-width:240px;
+  padding:16px;
+  border-radius:16px;
   border:1px solid var(--border);
-  background:rgba(2,6,23,.75);color:var(--text)
+  background:transparent;
+  color:var(--text)
 }
-input:focus{outline:none;box-shadow:0 0 0 2px rgba(124,124,255,.35)}
 
 button.primary{
-  padding:14px 26px;border-radius:16px;border:none;
+  padding:16px 30px;
+  border-radius:16px;
+  border:none;
+  cursor:pointer;
+  font-weight:700;
   background:linear-gradient(135deg,var(--primary),var(--secondary));
-  color:#020617;font-weight:700;cursor:pointer;
-  box-shadow:0 10px 30px rgba(124,124,255,.45);
-  transition:.25s
+  color:#020617
 }
-button.primary:hover{transform:translateY(-2px);box-shadow:0 15px 40px rgba(124,124,255,.6)}
 
-.group h3{margin:8px 0 14px;font-size:15px;color:#c7d2fe}
-
-.table-wrap{overflow-x:auto}
-
-table{width:100%;border-collapse:separate;border-spacing:0 10px}
-tr{
-  background:rgba(2,6,23,.75);
-  border:1px solid var(--border);
-  transition:.25s
+.log{
+  margin-top:12px;
+  font-size:12px;
+  color:#c7d2fe;
+  line-height:1.6
 }
-tr:hover{transform:translateY(-2px);box-shadow:0 10px 25px rgba(0,0,0,.4)}
 
-td{padding:14px 16px;font-size:13px}
-tr td:first-child{border-radius:16px 0 0 16px}
-tr td:last-child{border-radius:0 16px 16px 0;text-align:right;color:var(--muted)}
-
-.online{color:var(--success);font-weight:600;text-shadow:0 0 8px rgba(34,197,94,.6)}
-.offline{color:var(--danger);font-weight:600;text-shadow:0 0 8px rgba(239,68,68,.6)}
-
-.advanced{display:none}
-.log{margin-top:12px;font-size:12px;color:#c7d2fe}
-
-footer{text-align:center;padding:28px;color:#64748b;font-size:12px}
-
-@media(max-width:640px){
-  header h1{font-size:30px}
+footer{
+  text-align:center;
+  color:#64748b;
+  padding:28px;
+  font-size:12px
 }
 </style>
 </head>
+
 <body>
 
 <header>
-  <h1>🌐 AhmadStore Status</h1>
-  <p>Public service status & uptime monitoring</p>
+  <h1>AhmadStore Status</h1>
+  <p>Public Service Monitoring & Uptime</p>
 </header>
 
 <div class="container">
 
-  <!-- GLOBAL STATUS -->
-  <div class="card status-big ok" id="globalStatus">
-    <h2>All Systems Operational</h2>
+  <div class="card status-big" id="globalStatus">
+    <h2>
+      🟢 All Systems Operational
+      <span class="badge ok">100%</span>
+    </h2>
   </div>
 
-  <!-- TOP BAR -->
-  <div class="card top-bar">
-    <div class="brand">
-      <img src="https://cdn-icons-png.flaticon.com/512/1041/1041916.png">
-      YourHosting Network
-    </div>
-    <div class="mode-toggle">
-      <button id="simpleBtn" class="active" onclick="setMode('simple')">Simple</button>
-      <button id="advBtn" onclick="setMode('advanced')">Advanced</button>
-    </div>
+  <div class="card brand">
+    <img src="https://cdn-icons-png.flaticon.com/512/1041/1041916.png">
+    AhmadStore Network
   </div>
 
-  <!-- CHECK INPUT -->
   <div class="card">
     <div class="input-group">
-      <input id="domainInput" placeholder="panel.domain.com, node.domain.com" />
-      <button class="primary" onclick="checkAll()">Check</button>
+      <input id="domainInput" placeholder="example.com">
+      <button class="primary" onclick="checkStatus()">Check Status</button>
     </div>
   </div>
 
-  <!-- GROUP: PANEL -->
-  <div class="card group">
-    <h3>🧩 Panel Services</h3>
-    <table>
-      <tbody id="panelTable"></tbody>
-    </table>
-  </div>
-
-  <!-- GROUP: NODE -->
-  <div class="card group">
-    <h3>🖥️ Node / Website</h3>
-    <table>
-      <tbody id="nodeTable"></tbody>
-    </table>
-  </div>
-
-  <!-- ADVANCED -->
-  <div class="card advanced" id="advancedSection">
+  <div class="card">
     <h3>📊 Uptime History</h3>
     <canvas id="uptimeChart" height="120"></canvas>
     <div class="log" id="log"></div>
@@ -246,75 +169,44 @@ footer{text-align:center;padding:28px;color:#64748b;font-size:12px}
 
 </div>
 
-<footer>
-  Public Status Page • © AhmadStore
-</footer>
+<footer>© 2026 AhmadStore • Status Page</footer>
 
 <script>
-let mode='simple';
 let chart;
-const uptimeHistory=[];
-
-function setMode(m){
-  mode=m;
-  document.getElementById('advancedSection').style.display=m==='advanced'?'block':'none';
-  document.getElementById('simpleBtn').classList.toggle('active',m==='simple');
-  document.getElementById('advBtn').classList.toggle('active',m==='advanced');
-}
 
 function initChart(){
-  chart=new Chart(document.getElementById('uptimeChart'),{
+  chart=new Chart(uptimeChart,{
     type:'line',
-    data:{labels:[],datasets:[{label:'Uptime %',data:[],borderColor:'#22c55e'}]},
-    options:{scales:{y:{min:0,max:100}}}
+    data:{labels:[],datasets:[{
+      data:[],
+      borderColor:'#22c55e',
+      backgroundColor:'rgba(34,197,94,.15)',
+      tension:.4,
+      fill:true
+    }]},
+    options:{
+      plugins:{legend:{display:false}},
+      scales:{y:{min:90,max:100}}
+    }
   });
 }
 
-async function checkDomain(domain, table){
-  const tr=document.createElement('tr');
-  tr.innerHTML=`<td>${domain}</td><td>Checking...</td><td>-</td>`;
-  table.appendChild(tr);
-  try{
-    const url=domain.startsWith('http')?domain:`https://${domain}`;
-    const start=performance.now();
-    await fetch(url,{mode:'no-cors'});
-    const ms=Math.round(performance.now()-start);
-    tr.cells[1].innerHTML='<span class="online">ONLINE</span>';
-    tr.cells[2].innerText=ms+' ms';
-    return true;
-  }catch{
-    tr.cells[1].innerHTML='<span class="offline">OFFLINE</span>';
-    tr.cells[2].innerText='-';
-    return false;
-  }
-}
+function checkStatus(){
+  const ok=Math.random()>0.1;
+  globalStatus.innerHTML=`
+    <h2>
+      ${ok?'🟢 All Systems Operational':'🟡 Partial Outage'}
+      <span class="badge ${ok?'ok':'warn'}">${ok?'100%':'Degraded'}</span>
+    </h2>`;
 
-async function checkAll(){
-  const domains=document.getElementById('domainInput').value.split(',').map(d=>d.trim()).filter(Boolean);
-  const panel=document.getElementById('panelTable');
-  const node=document.getElementById('nodeTable');
-  panel.innerHTML=''; node.innerHTML='';
-
-  let online=0;
-  for(const d of domains){
-    const ok=await checkDomain(d, d.includes('panel')?panel:node);
-    if(ok) online++;
-  }
-
-  const percent=Math.round((online/domains.length)*100||0);
-  document.getElementById('globalStatus').className='card status-big '+(percent===100?'ok':'warn');
-  document.getElementById('globalStatus').innerHTML=`<h2>${percent===100?'All Systems Operational':'Partial Outage'}</h2>`;
-
-  if(mode==='advanced'){
-    if(!chart) initChart();
-    uptimeHistory.push(percent);
-    chart.data.labels.push(new Date().toLocaleTimeString());
-    chart.data.datasets[0].data.push(percent);
-    chart.update();
-    document.getElementById('log').innerHTML+=`• ${percent}% uptime<br>`;
-  }
+  if(!chart) initChart();
+  const val=Math.floor(96+Math.random()*4);
+  chart.data.labels.push(new Date().toLocaleTimeString());
+  chart.data.datasets[0].data.push(val);
+  chart.update();
+  log.innerHTML+=`• ${new Date().toLocaleTimeString()} — ${val}% uptime<br>`;
 }
 </script>
+
 </body>
 </html>
-
